affinity.yml
apiVersion: v1
kind: Pod

metadata:
  name: affinity-demo
  namespace: k8s-demo

spec:

  affinity:

    nodeAffinity:

      requiredDuringSchedulingIgnoredDuringExecution:

        nodeSelectorTerms:

          - matchExpressions:

              - key: workload

                operator: In

                values:
                  - demo

  containers:

    - name: nginx
      image: nginx:1.27
