daemonset.yml
apiVersion: apps/v1
kind: DaemonSet

metadata:
  name: nginx-daemon
  namespace: k8s-demo

spec:

  selector:
    matchLabels:
      app: nginx-daemon

  template:

    metadata:
      labels:
        app: nginx-daemon

    spec:

      containers:

        - name: nginx
          image: nginx:1.27
