deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-deployment
  namespace: k8s-demo

spec:

  replicas: 3

  selector:
    matchLabels:
      app: nginx

  template:

    metadata:
      labels:
        app: nginx

    spec:

      containers:

        - name: nginx
          image: nginx:1.27

          ports:
            - containerPort: 80
