deployment_hpa.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hpa-demo
  namespace: k8s-demo

spec:

  replicas: 2

  selector:
    matchLabels:
      app: hpa-demo

  template:

    metadata:
      labels:
        app: hpa-demo

    spec:

      containers:

        - name: nginx
          image: nginx:1.27

          resources:

            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "256Mi"
