initcontainer.yml
apiVersion: v1
kind: Pod

metadata:
  name: init-demo
  namespace: k8s-demo

spec:

  containers:

    - name: nginx
      image: nginx:1.27
