lifecyclehooks_example.yml
apiVersion: v1
kind: Pod

metadata:
  name: lifecycle-demo
  namespace: k8s-demo

spec:

  containers:

    - name: nginx
      image: nginx:1.27

      lifecycle:

        postStart:

          exec:
            command:
              - sh
              - -c
              - echo "Container started"

        preStop:

          exec:
            command:
              - sh
              - -c
              - echo "Container stopping"
