liveness.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: liveness-demo
  namespace: k8s-demo

spec:

  replicas: 1

  selector:
    matchLabels:
      app: liveness-demo

  template:

    metadata:
      labels:
        app: liveness-demo

    spec:

      containers:

        - name: nginx
          image: nginx:1.27

          ports:
            - containerPort: 80

          livenessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 10
