pod_with_toleration.yml
apiVersion: v1
kind: Pod

metadata:
  name: toleration-demo
  namespace: k8s-demo

spec:

  tolerations:

    - key: dedicated
      operator: Equal
      value: demo
      effect: NoSchedule

  containers:

    - name: nginx
      image: nginx:1.27
