pvc-pod.yml
apiVersion: v1
kind: Pod

metadata:
  name: storage-demo
  namespace: k8s-demo

spec:

  containers:

    - name: nginx
      image: nginx:1.27

      volumeMounts:

        - name: app-storage
          mountPath: /data

  volumes:

    - name: app-storage

      persistentVolumeClaim:
        claimName: nginx-pvc
