readiness.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: readiness-demo
  namespace: k8s-demo

spec:

  replicas: 2

  selector:
    matchLabels:
      app: readiness-demo

  template:

    metadata:
      labels:
        app: readiness-demo

    spec:

      containers:

        - name: nginx
          image: nginx:1.27

          ports:
            - containerPort: 80

          readinessProbe:

            httpGet:
              path: /
              port: 80

            initialDelaySeconds: 5
            periodSeconds: 10
