sidecar.yml
apiVersion: v1
kind: Pod

metadata:
  name: sidecar-demo
  namespace: k8s-demo

spec:

  containers:

    - name: app
      image: busybox:1.36

      command:
        - sh
        - -c
        - |
          while true; do
            echo "$(date) application log"
            sleep 5
          done

    - name: sidecar
      image: busybox:1.36

      command:
        - sh
        - -c
        - |
          while true; do
            echo "$(date) sidecar running"
            sleep 5
          done
