statefulset.yml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: nginx-stateful
  namespace: k8s-demo

spec:

  serviceName: nginx-headless

  replicas: 3

  selector:
    matchLabels:
      app: nginx-stateful

  template:

    metadata:
      labels:
        app: nginx-stateful

    spec:

      containers:

        - name: nginx
          image: nginx:1.27

          volumeMounts:

            - name: data
              mountPath: /data

  volumeClaimTemplates:

    - metadata:
        name: data

      spec:

        accessModes:
          - ReadWriteOnce

        storageClassName: gp3

        resources:

          requests:
            storage: 2Gi
