headless_service.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx-headless
  namespace: k8s-demo

spec:

  clusterIP: None

  selector:
    app: nginx-stateful

  ports:

    - port: 80
      targetPort: 80
