service-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx-service
  namespace: k8s-demo

spec:

  type: ClusterIP

  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
