service-loadbalancer.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx-loadbalancer
  namespace: k8s-demo

spec:

  type: LoadBalancer

  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
