service-nodeport.yml
apiVersion: v1
kind: Service

metadata:
  name: nginx-nodeport
  namespace: k8s-demo

spec:

  type: NodePort

  selector:
    app: nginx

  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
      protocol: TCP
