service-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-ingress
  namespace: k8s-demo

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:

  ingressClassName: alb

  rules:

    - host: nginx.example.com

      http:

        paths:

          - path: /
            pathType: Prefix

            backend:

              service:
                name: nginx-service
                port:
                  number: 80
