networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: nginx-network-policy
  namespace: k8s-demo

spec:

  podSelector:

    matchLabels:
      app: nginx

  policyTypes:
    - Ingress

  ingress:

    - from:

        - podSelector:

            matchLabels:
              app: frontend

      ports:

        - protocol: TCP
          port: 80
